# xemu-plugin-wait-trace

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: plugin.c
src/tracer/: Tracer.cpp  Tracer.h  TracerInterface.h
src/xemu/: qemu-plugin-ext.h
